--- a/sass/components/_studio.scss
+++ b/sass/components/_studio.scss
@@ -332,3 +332,94 @@
 }
 
 // ________________________________________________________________
+.clients {
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+
+  &__title {
+    margin-bottom: 30px;
+
+    font-size: 28px;
+    line-height: 1.18;
+    text-align: center;
+    letter-spacing: 0.03em;
+
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 50px;
+      font-size: 36px;
+      line-height: 1.17;
+    }
+  }
+}
+
+.clients-list {
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 0px;
+  justify-content: center;
+  @media screen and (min-width: 1200px) {
+    justify-content: space-between;
+  }
+
+  &__logo {
+    fill: #afb1b8;
+    transition: fill 250ms $animationTimingFunction;
+  }
+
+  &__link {
+    display: block;
+    max-height: 92px;
+    text-align: center;
+
+    border: 1px solid #afb1b8;
+    border-radius: 4px;
+    padding: 16px 32px;
+    transition: border-color 250ms $animationTimingFunction;
+  }
+
+  &__item {
+    @media screen and (max-width: 767px) {
+      width: calc((100% - 30px) / 2);
+    }
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      width: calc((100% - 60px) / 3);
+    }
+  }
+
+  &__item:not(:nth-last-child(-n + 2)) {
+    @media screen and (max-width: 767px) {
+      margin-bottom: 30px;
+    }
+  }
+
+  &__item:nth-child(2n + 1) {
+    @media screen and (max-width: 767px) {
+      margin-right: 30px;
+    }
+  }
+
+  &__item:nth-child(-n + 3) {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      margin-bottom: 30px;
+    }
+  }
+
+  &__item:not(:nth-child(3n)) {
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+      margin-right: 30px;
+    }
+  }
+
+  &__item &__link:hover,
+  &__item &__link:focus,
+  &__link:hover &__logo,
+  &__link:focus &__logo {
+    fill: $accentColor;
+    border-color: $accentColor;
+  }
+}
