--- a/css/main.css
+++ b/css/main.css
@@ -381,15 +381,26 @@ a {
 }
 
 .mobile-menu--container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
   padding-top: 48px;
-  padding-right: 0;
   padding-bottom: 48px;
-  padding-left: 15px;
   background-color: #ffffff;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
@@ -406,14 +417,11 @@ a {
 
 .mobile-menu__site-nav, .mobile-menu__contacts-list, .mobile-menu__social-links {
   padding-left: 0;
+  text-align: center;
 }
 
 .mobile-menu__site-nav__item:not(:last-child) {
   margin-bottom: 32px;
-}
-
-.mobile-menu__site-nav__item:last-child {
-  margin-bottom: 270px;
 }
 
 .mobile-menu__site-nav__link {
@@ -662,7 +670,13 @@ a {
 }
 
 .hero__container {
-  padding: 200px 15px;
+  padding: 118px 15px;
+}
+
+@media screen and (min-width: 1200px) {
+  .hero__container {
+    padding: 200px 15px;
+  }
 }
 
 .hero__title {
@@ -1162,8 +1176,10 @@ a {
   }
 }
 
-.footer__container-form-subscribe {
-  padding-top: 12px;
+@media screen and (min-width: 768px) {
+  .footer__container-form-subscribe {
+    margin-top: 12px;
+  }
 }
 
 .footer__appeal {
@@ -1216,7 +1232,7 @@ a {
 
 @media screen and (max-width: 1199px) {
   .footer-container-contacts {
-    padding-bottom: 60px;
+    margin-bottom: 60px;
   }
 }
 
@@ -1233,22 +1249,16 @@ a {
 }
 
 @media screen and (min-width: 768px) {
-  .footer-container-social-links {
-    padding-top: 12px;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .footer-container-social-links {
-    padding-bottom: 60px;
-  }
-}
-
-@media screen and (min-width: 768px) {
   .footer__container--mobile-position {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer__container--mobile-position {
+    margin-bottom: 60px;
   }
 }
 
@@ -1278,6 +1288,12 @@ a {
   color: #ffffff;
 }
 
+@media screen and (min-width: 768px) {
+  .footer-title-social-links {
+    padding-top: 12px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .form-subscribe {
     display: -webkit-box;
@@ -1287,16 +1303,28 @@ a {
 }
 
 .form-subscribe__email-form {
-  width: 358px;
+  width: 100%;
   height: 50px;
   padding-left: 16px;
-  margin-right: 12px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   -webkit-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
           filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: #2f303a;
   color: #ffffff;
+}
+
+@media screen and (min-width: 768px) {
+  .form-subscribe__email-form {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .form-subscribe__email-form {
+    width: 358px;
+    margin-right: 12px;
+  }
 }
 
 .form-subscribe__email-form::-webkit-input-placeholder {
@@ -1743,12 +1771,6 @@ a {
   padding-left: 0px;
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .card-set__item:first-child .card-set__description {
-    padding-bottom: 54px;
-  }
-}
-
 .card-set__item {
   width: 100%;
   background: #ffffff;
@@ -1809,6 +1831,16 @@ a {
 }
 
 .card-set__description {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
   padding: 20px 24px;
   border: 1px solid #eeeeee;
 }
@@ -1831,6 +1863,17 @@ a {
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.card-set__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
 }
 
 .card-set__link:focus .card-set__overlay,
