--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -86,13 +86,6 @@
   flex-wrap: wrap;
   padding-left: 0px;
 
-  // _____костыль_____
-  &__item:first-child .card-set__description {
-    @media screen and (min-width: 768px) and (max-width: 1199px) {
-      padding-bottom: 54px;
-    }
-  }
-
   &__item {
     width: 100%;
     @media screen and (min-width: 768px) {
@@ -149,6 +142,10 @@
   }
 
   &__description {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+
     padding: 20px 24px;
     border: 1px solid #eeeeee;
   }
@@ -168,6 +165,12 @@
 
     transform: translateY(101%);
     transition: transform 250ms $animationTimingFunction;
+  }
+
+  &__link {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
   }
 
   &__link:focus &__overlay,
